@@ -25,6 +25,7 @@
 - added: `DatabaseBuilder.each(fn)` for browsing of evaluated records
 - added: Bundles can be downloaded from URL addresses
 - added: `ONCE()` alias to `F.once()`
+- added: `image.define(value)` performs `convert -define 'value'`
 
 - updated: `debug` mode creates a `start_name_script.pid` instead of `debug.pid`
 - updated: `NEWOPERATION()` supports `repeat`, `stop` and `binderror` arguments (more in docs)
